# pyweb_module_8

part_1/pr-mongo/: main.py  pyproject.toml  test.py
part_1/pr-mongo/seeds/: connection.py  models.py
part_2/mailerMQ/: consumer.py  producer.py
part_2/mailerMQ/back-up/: consumer.py  producer.py  pyproject.toml  test.py
part_2/mailerMQ/back-up/db/: connection.py  create_users.py  models.py
part_2/mailerMQ/db/: create_users.py
