[tool.poetry]
name = "pr-mongo"
version = "0.1.0"
description = ""
authors = ["Gerenzeo <124388411+Gerenzeo@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "pr_mongo"}]

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.27.0"
pymongo = "^4.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
